// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots widgets/Loader circular 1`] = `
<div
  className="MuiGrid-container-1"
>
  <div
    className="MuiGrid-item-2 MuiGrid-grid-xs-12-41"
  >
    <div
      className="MuiGrid-container-1 MuiGrid-align-items-xs-center-9 MuiGrid-justify-xs-center-18 Loader-root-1"
    >
      <div
        className="MuiCircularProgress-root MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
        role="progressbar"
        style={
          Object {
            "height": 50,
            "width": 50,
          }
        }
      >
        <svg
          className="MuiCircularProgress-svg"
          viewBox="22 22 44 44"
        >
          <circle
            className="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
            cx={44}
            cy={44}
            fill="none"
            r={20.2}
            strokeWidth={3.6}
            style={Object {}}
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/Loader custom 1`] = `
<div
  className="MuiGrid-container-195"
>
  <div
    className="MuiGrid-item-196 MuiGrid-grid-xs-12-235"
  >
    <div
      className="MuiGrid-container-195 MuiGrid-align-items-xs-center-203 MuiGrid-justify-xs-center-212 Loader-root-1"
    >
      <div
        className="MuiCircularProgress-root MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
        role="progressbar"
        style={
          Object {
            "color": "#9c27b0",
            "height": 40,
            "width": 40,
          }
        }
      >
        <svg
          className="MuiCircularProgress-svg"
          viewBox="22 22 44 44"
        >
          <circle
            className="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
            cx={44}
            cy={44}
            fill="none"
            r={18.5}
            strokeWidth={7}
            style={Object {}}
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/Loader linear 1`] = `
<div
  className="MuiGrid-container-98"
>
  <div
    className="MuiGrid-item-99 MuiGrid-grid-xs-12-138"
  >
    <div
      className="MuiGrid-container-98 MuiGrid-align-items-xs-center-106 MuiGrid-justify-xs-center-115 Loader-root-1"
    >
      <div
        className="MuiLinearProgress-root MuiLinearProgress-colorPrimary MuiLinearProgress-indeterminate Loader-linear-3"
        role="progressbar"
      >
        <div
          className="MuiLinearProgress-bar MuiLinearProgress-barColorPrimary MuiLinearProgress-bar1Indeterminate"
          style={Object {}}
        />
        <div
          className="MuiLinearProgress-bar MuiLinearProgress-barColorPrimary MuiLinearProgress-bar2Indeterminate"
          style={Object {}}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/SideMenu basic 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-292 MuiGrid-spacing-xs-24-316"
    >
      <div
        className="MuiDrawer-root-389 MuiDrawer-docked-390"
      >
        <div
          className="MuiPaper-root-401 MuiPaper-elevation0-403 MuiDrawer-paper-391 MuiDrawer-paperAnchorLeft-392 MuiDrawer-paperAnchorDockedLeft-396"
          style={Object {}}
        >
          <nav
            className="MuiList-root MuiList-padding SideMenu-root-2 Component-flexed-1"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            style={
              Object {
                "width": 250,
              }
            }
          >
            <div
              className="SideMenu-topSpacer-3"
            />
            <div
              className="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters SideMenu-listItemGutters-5 MuiListItem-button SideMenu-listItem-4"
              onBlur={[Function]}
              onClick={[Function]}
              onContextMenu={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <div
                className="MuiListItemIcon-root"
              >
                <svg
                  aria-hidden="true"
                  className="MuiSvgIcon-root"
                  focusable="false"
                  role="presentation"
                  style={
                    Object {
                      "color": "#fff",
                      "margin": "0",
                    }
                  }
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                  <path
                    d="M3 13h8V3H3v10zm0 8h8v-6H3v6zm10 0h8V11h-8v10zm0-18v6h8V3h-8z"
                  />
                </svg>
              </div>
              <div
                className="MuiListItemText-root SideMenu-listItemText-7"
              >
                <span
                  className="MuiTypography-root MuiTypography-body1 MuiListItemText-primary SideMenu-listItemPrimary-6"
                >
                  Dashboard
                </span>
              </div>
              <span
                className="MuiTouchRipple-root"
              />
            </div>
            <div
              className="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters SideMenu-listItemGutters-5 MuiListItem-button SideMenu-listItem-4"
              onBlur={[Function]}
              onClick={[Function]}
              onContextMenu={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <div
                className="MuiListItemIcon-root"
              >
                <svg
                  aria-hidden="true"
                  className="MuiSvgIcon-root"
                  focusable="false"
                  role="presentation"
                  style={
                    Object {
                      "color": "#fff",
                      "margin": "0",
                    }
                  }
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                  <path
                    d="M16 11c1.66 0 2.99-1.34 2.99-3S17.66 5 16 5c-1.66 0-3 1.34-3 3s1.34 3 3 3zm-8 0c1.66 0 2.99-1.34 2.99-3S9.66 5 8 5C6.34 5 5 6.34 5 8s1.34 3 3 3zm0 2c-2.33 0-7 1.17-7 3.5V19h14v-2.5c0-2.33-4.67-3.5-7-3.5zm8 0c-.29 0-.62.02-.97.05 1.16.84 1.97 1.97 1.97 3.45V19h6v-2.5c0-2.33-4.67-3.5-7-3.5z"
                  />
                </svg>
              </div>
              <div
                className="MuiListItemText-root SideMenu-listItemText-7"
              >
                <span
                  className="MuiTypography-root MuiTypography-body1 MuiListItemText-primary SideMenu-listItemPrimary-6"
                >
                  Employees
                </span>
              </div>
              <span
                className="MuiTouchRipple-root"
              />
            </div>
            <div
              className="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters SideMenu-listItemGutters-5 MuiListItem-button SideMenu-listItem-4"
              onBlur={[Function]}
              onClick={[Function]}
              onContextMenu={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <div
                className="MuiListItemIcon-root"
              >
                <svg
                  aria-hidden="true"
                  className="MuiSvgIcon-root"
                  focusable="false"
                  role="presentation"
                  style={
                    Object {
                      "color": "#fff",
                      "margin": "0",
                    }
                  }
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zM9 17H7v-7h2v7zm4 0h-2V7h2v10zm4 0h-2v-4h2v4z"
                  />
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                </svg>
              </div>
              <div
                className="MuiListItemText-root SideMenu-listItemText-7"
              >
                <span
                  className="MuiTypography-root MuiTypography-body1 MuiListItemText-primary SideMenu-listItemPrimary-6"
                >
                  Theme
                </span>
              </div>
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root"
                focusable="false"
                role="presentation"
                style={
                  Object {
                    "color": "#fff",
                    "margin": "0",
                  }
                }
                viewBox="0 0 24 24"
              >
                <path
                  d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                />
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
              </svg>
              <span
                className="MuiTouchRipple-root"
              />
            </div>
          </nav>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/SideMenu mini selected 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-564 MuiGrid-spacing-xs-24-588"
    >
      <div
        className="MuiDrawer-root-661 MuiDrawer-docked-662"
      >
        <div
          className="MuiPaper-root-673 MuiPaper-elevation0-675 MuiDrawer-paper-663 MuiDrawer-paperAnchorLeft-664 MuiDrawer-paperAnchorDockedLeft-668"
          style={Object {}}
        >
          <nav
            className="MuiList-root MuiList-padding SideMenu-root-2 Component-flexed-1"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            style={
              Object {
                "width": 80,
              }
            }
          >
            <div
              className="SideMenu-topSpacer-3"
            />
            <div
              className="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters SideMenu-listItemGutters-5 MuiListItem-button SideMenu-activeItem-10"
              onBlur={[Function]}
              onClick={[Function]}
              onContextMenu={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <div
                className="MuiListItemIcon-root"
              >
                <svg
                  aria-hidden="true"
                  className="MuiSvgIcon-root"
                  focusable="false"
                  role="presentation"
                  style={
                    Object {
                      "color": "#fff",
                      "margin": "0",
                    }
                  }
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                  <path
                    d="M3 13h8V3H3v10zm0 8h8v-6H3v6zm10 0h8V11h-8v10zm0-18v6h8V3h-8z"
                  />
                </svg>
              </div>
              <div
                className="MuiListItemText-root SideMenu-listItemText-7 SideMenu-listItemHidden-8"
              >
                <span
                  className="MuiTypography-root MuiTypography-body1 MuiListItemText-primary SideMenu-listItemPrimary-6"
                >
                  Dashboard
                </span>
              </div>
              <span
                className="MuiTouchRipple-root"
              />
            </div>
            <div
              className="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters SideMenu-listItemGutters-5 MuiListItem-button SideMenu-listItem-4"
              onBlur={[Function]}
              onClick={[Function]}
              onContextMenu={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <div
                className="MuiListItemIcon-root"
              >
                <svg
                  aria-hidden="true"
                  className="MuiSvgIcon-root"
                  focusable="false"
                  role="presentation"
                  style={
                    Object {
                      "color": "#fff",
                      "margin": "0",
                    }
                  }
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                  <path
                    d="M16 11c1.66 0 2.99-1.34 2.99-3S17.66 5 16 5c-1.66 0-3 1.34-3 3s1.34 3 3 3zm-8 0c1.66 0 2.99-1.34 2.99-3S9.66 5 8 5C6.34 5 5 6.34 5 8s1.34 3 3 3zm0 2c-2.33 0-7 1.17-7 3.5V19h14v-2.5c0-2.33-4.67-3.5-7-3.5zm8 0c-.29 0-.62.02-.97.05 1.16.84 1.97 1.97 1.97 3.45V19h6v-2.5c0-2.33-4.67-3.5-7-3.5z"
                  />
                </svg>
              </div>
              <div
                className="MuiListItemText-root SideMenu-listItemText-7 SideMenu-listItemHidden-8"
              >
                <span
                  className="MuiTypography-root MuiTypography-body1 MuiListItemText-primary SideMenu-listItemPrimary-6"
                >
                  Employees
                </span>
              </div>
              <span
                className="MuiTouchRipple-root"
              />
            </div>
            <div
              className="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters SideMenu-listItemGutters-5 MuiListItem-button SideMenu-listItem-4"
              onBlur={[Function]}
              onClick={[Function]}
              onContextMenu={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <div
                className="MuiListItemIcon-root"
              >
                <svg
                  aria-hidden="true"
                  className="MuiSvgIcon-root"
                  focusable="false"
                  role="presentation"
                  style={
                    Object {
                      "color": "#fff",
                      "margin": "0",
                    }
                  }
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zM9 17H7v-7h2v7zm4 0h-2V7h2v10zm4 0h-2v-4h2v4z"
                  />
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                </svg>
              </div>
              <div
                className="MuiListItemText-root SideMenu-listItemText-7 SideMenu-listItemHidden-8"
              >
                <span
                  className="MuiTypography-root MuiTypography-body1 MuiListItemText-primary SideMenu-listItemPrimary-6"
                >
                  Theme
                </span>
              </div>
              <span
                className="MuiTouchRipple-root"
              />
            </div>
          </nav>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/SideMenu selected 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-428 MuiGrid-spacing-xs-24-452"
    >
      <div
        className="MuiDrawer-root-525 MuiDrawer-docked-526"
      >
        <div
          className="MuiPaper-root-537 MuiPaper-elevation0-539 MuiDrawer-paper-527 MuiDrawer-paperAnchorLeft-528 MuiDrawer-paperAnchorDockedLeft-532"
          style={Object {}}
        >
          <nav
            className="MuiList-root MuiList-padding SideMenu-root-2 Component-flexed-1"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            style={
              Object {
                "width": 250,
              }
            }
          >
            <div
              className="SideMenu-topSpacer-3"
            />
            <div
              className="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters SideMenu-listItemGutters-5 MuiListItem-button SideMenu-activeItem-10"
              onBlur={[Function]}
              onClick={[Function]}
              onContextMenu={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <div
                className="MuiListItemIcon-root"
              >
                <svg
                  aria-hidden="true"
                  className="MuiSvgIcon-root"
                  focusable="false"
                  role="presentation"
                  style={
                    Object {
                      "color": "#fff",
                      "margin": "0",
                    }
                  }
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                  <path
                    d="M3 13h8V3H3v10zm0 8h8v-6H3v6zm10 0h8V11h-8v10zm0-18v6h8V3h-8z"
                  />
                </svg>
              </div>
              <div
                className="MuiListItemText-root SideMenu-listItemText-7"
              >
                <span
                  className="MuiTypography-root MuiTypography-body1 MuiListItemText-primary SideMenu-listItemPrimary-6"
                >
                  Dashboard
                </span>
              </div>
              <span
                className="MuiTouchRipple-root"
              />
            </div>
            <div
              className="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters SideMenu-listItemGutters-5 MuiListItem-button SideMenu-listItem-4"
              onBlur={[Function]}
              onClick={[Function]}
              onContextMenu={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <div
                className="MuiListItemIcon-root"
              >
                <svg
                  aria-hidden="true"
                  className="MuiSvgIcon-root"
                  focusable="false"
                  role="presentation"
                  style={
                    Object {
                      "color": "#fff",
                      "margin": "0",
                    }
                  }
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                  <path
                    d="M16 11c1.66 0 2.99-1.34 2.99-3S17.66 5 16 5c-1.66 0-3 1.34-3 3s1.34 3 3 3zm-8 0c1.66 0 2.99-1.34 2.99-3S9.66 5 8 5C6.34 5 5 6.34 5 8s1.34 3 3 3zm0 2c-2.33 0-7 1.17-7 3.5V19h14v-2.5c0-2.33-4.67-3.5-7-3.5zm8 0c-.29 0-.62.02-.97.05 1.16.84 1.97 1.97 1.97 3.45V19h6v-2.5c0-2.33-4.67-3.5-7-3.5z"
                  />
                </svg>
              </div>
              <div
                className="MuiListItemText-root SideMenu-listItemText-7"
              >
                <span
                  className="MuiTypography-root MuiTypography-body1 MuiListItemText-primary SideMenu-listItemPrimary-6"
                >
                  Employees
                </span>
              </div>
              <span
                className="MuiTouchRipple-root"
              />
            </div>
            <div
              className="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters SideMenu-listItemGutters-5 MuiListItem-button SideMenu-listItem-4"
              onBlur={[Function]}
              onClick={[Function]}
              onContextMenu={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <div
                className="MuiListItemIcon-root"
              >
                <svg
                  aria-hidden="true"
                  className="MuiSvgIcon-root"
                  focusable="false"
                  role="presentation"
                  style={
                    Object {
                      "color": "#fff",
                      "margin": "0",
                    }
                  }
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zM9 17H7v-7h2v7zm4 0h-2V7h2v10zm4 0h-2v-4h2v4z"
                  />
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                </svg>
              </div>
              <div
                className="MuiListItemText-root SideMenu-listItemText-7"
              >
                <span
                  className="MuiTypography-root MuiTypography-body1 MuiListItemText-primary SideMenu-listItemPrimary-6"
                >
                  Theme
                </span>
              </div>
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root"
                focusable="false"
                role="presentation"
                style={
                  Object {
                    "color": "#fff",
                    "margin": "0",
                  }
                }
                viewBox="0 0 24 24"
              >
                <path
                  d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                />
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
              </svg>
              <span
                className="MuiTouchRipple-root"
              />
            </div>
          </nav>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/Widget (dark theme) basic 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-1185 MuiGrid-spacing-xs-24-1209"
    >
      <div
        className="MuiGrid-item-1186 MuiGrid-grid-xs-12-1225"
      >
        <div
          className="MuiPaper-root MuiPaper-elevation2 MuiPaper-rounded Widget-root"
        >
          <div
            className="MuiGrid-container-1185 MuiGrid-direction-xs-column-1188 Widget-container"
          >
            <div
              className="MuiGrid-item-1186"
            >
              <h6
                className="MuiTypography-root MuiTypography-h6 MuiTypography-colorInherit MuiTypography-gutterBottom"
              >
                Title
              </h6>
            </div>
            <div
              className="MuiGrid-container-1185 MuiGrid-item-1186 Widget-content"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/Widget (dark theme) custom height 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-1573 MuiGrid-spacing-xs-24-1597"
    >
      <div
        className="MuiGrid-item-1574 MuiGrid-grid-xs-12-1613"
      >
        <div
          className="MuiPaper-root MuiPaper-elevation2 MuiPaper-rounded Widget-root"
        >
          <div
            className="MuiGrid-container-1573 MuiGrid-direction-xs-column-1576 Widget-container"
          >
            <div
              className="MuiGrid-item-1574"
            >
              <h6
                className="MuiTypography-root MuiTypography-h6 MuiTypography-colorInherit MuiTypography-gutterBottom"
              >
                Custom content height
              </h6>
            </div>
            <div
              className="MuiGrid-container-1573 MuiGrid-item-1574 Widget-content Component-content-1"
            >
              <div>
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/Widget (dark theme) featured 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-1282 MuiGrid-spacing-xs-24-1306"
    >
      <div
        className="MuiGrid-item-1283 MuiGrid-grid-xs-12-1322"
      >
        <div
          className="MuiPaper-root MuiPaper-elevation2 MuiPaper-rounded Widget-root Widget-featured"
        >
          <div
            className="MuiGrid-container-1282 MuiGrid-direction-xs-column-1285 Widget-container"
          >
            <div
              className="MuiGrid-item-1283"
            >
              <h6
                className="MuiTypography-root MuiTypography-h6 MuiTypography-colorInherit MuiTypography-gutterBottom"
              >
                Title
              </h6>
            </div>
            <div
              className="MuiGrid-container-1282 MuiGrid-item-1283 Widget-content"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/Widget (dark theme) squared 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-1476 MuiGrid-spacing-xs-24-1500"
    >
      <div
        className="MuiGrid-item-1477 MuiGrid-grid-xs-12-1516"
      >
        <div
          className="MuiPaper-root MuiPaper-elevation2 Widget-root"
        >
          <div
            className="MuiGrid-container-1476 MuiGrid-direction-xs-column-1479 Widget-container"
          >
            <div
              className="MuiGrid-item-1477"
            >
              <h6
                className="MuiTypography-root MuiTypography-h6 MuiTypography-colorInherit MuiTypography-gutterBottom"
              >
                I have no rounded borders
              </h6>
            </div>
            <div
              className="MuiGrid-container-1476 MuiGrid-item-1477 Widget-content"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/Widget (dark theme) with borders 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-1379 MuiGrid-spacing-xs-24-1403"
    >
      <div
        className="MuiGrid-item-1380 MuiGrid-grid-xs-12-1419"
      >
        <div
          className="MuiGrid-container-1379 MuiGrid-spacing-xs-24-1403"
        >
          <div
            className="MuiGrid-item-1380 MuiGrid-grid-xs-6-1413"
          >
            <div
              className="MuiPaper-root MuiPaper-elevation2 MuiPaper-rounded Widget-root Widget-border Widget-border-top"
            >
              <div
                className="MuiGrid-container-1379 MuiGrid-direction-xs-column-1382 Widget-container"
              >
                <div
                  className="MuiGrid-item-1380"
                >
                  <h6
                    className="MuiTypography-root MuiTypography-h6 MuiTypography-colorInherit MuiTypography-gutterBottom"
                  >
                    Border top
                  </h6>
                </div>
                <div
                  className="MuiGrid-container-1379 MuiGrid-item-1380 Widget-content"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
                </div>
              </div>
            </div>
          </div>
          <div
            className="MuiGrid-item-1380 MuiGrid-grid-xs-6-1413"
          >
            <div
              className="MuiPaper-root MuiPaper-elevation2 MuiPaper-rounded Widget-root Widget-border Widget-border-bottom"
            >
              <div
                className="MuiGrid-container-1379 MuiGrid-direction-xs-column-1382 Widget-container"
              >
                <div
                  className="MuiGrid-item-1380"
                >
                  <h6
                    className="MuiTypography-root MuiTypography-h6 MuiTypography-colorInherit MuiTypography-gutterBottom"
                  >
                    Border bottom
                  </h6>
                </div>
                <div
                  className="MuiGrid-container-1379 MuiGrid-item-1380 Widget-content"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
                </div>
              </div>
            </div>
          </div>
          <div
            className="MuiGrid-item-1380 MuiGrid-grid-xs-6-1413"
          >
            <div
              className="MuiPaper-root MuiPaper-elevation2 MuiPaper-rounded Widget-root Widget-border Component-customTopBorder-2 Widget-border-top"
            >
              <div
                className="MuiGrid-container-1379 MuiGrid-direction-xs-column-1382 Widget-container"
              >
                <div
                  className="MuiGrid-item-1380"
                >
                  <h6
                    className="MuiTypography-root MuiTypography-h6 MuiTypography-colorInherit MuiTypography-gutterBottom"
                  >
                    Border top custom
                  </h6>
                </div>
                <div
                  className="MuiGrid-container-1379 MuiGrid-item-1380 Widget-content"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
                </div>
              </div>
            </div>
          </div>
          <div
            className="MuiGrid-item-1380 MuiGrid-grid-xs-6-1413"
          >
            <div
              className="MuiPaper-root MuiPaper-elevation2 MuiPaper-rounded Widget-root Widget-border Component-customBotomBorder-3 Widget-border-bottom"
            >
              <div
                className="MuiGrid-container-1379 MuiGrid-direction-xs-column-1382 Widget-container"
              >
                <div
                  className="MuiGrid-item-1380"
                >
                  <h6
                    className="MuiTypography-root MuiTypography-h6 MuiTypography-colorInherit MuiTypography-gutterBottom"
                  >
                    Border bottom custom
                  </h6>
                </div>
                <div
                  className="MuiGrid-container-1379 MuiGrid-item-1380 Widget-content"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/Widget basic 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-700 MuiGrid-spacing-xs-24-724"
    >
      <div
        className="MuiGrid-item-701 MuiGrid-grid-xs-12-740"
      >
        <div
          className="MuiPaper-root MuiPaper-elevation2 MuiPaper-rounded Widget-root"
        >
          <div
            className="MuiGrid-container-700 MuiGrid-direction-xs-column-703 Widget-container"
          >
            <div
              className="MuiGrid-item-701"
            >
              <h6
                className="MuiTypography-root MuiTypography-h6 MuiTypography-colorInherit MuiTypography-gutterBottom"
              >
                Title
              </h6>
            </div>
            <div
              className="MuiGrid-container-700 MuiGrid-item-701 Widget-content"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/Widget custom height 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-1088 MuiGrid-spacing-xs-24-1112"
    >
      <div
        className="MuiGrid-item-1089 MuiGrid-grid-xs-12-1128"
      >
        <div
          className="MuiPaper-root MuiPaper-elevation2 MuiPaper-rounded Widget-root"
        >
          <div
            className="MuiGrid-container-1088 MuiGrid-direction-xs-column-1091 Widget-container"
          >
            <div
              className="MuiGrid-item-1089"
            >
              <h6
                className="MuiTypography-root MuiTypography-h6 MuiTypography-colorInherit MuiTypography-gutterBottom"
              >
                Custom content height
              </h6>
            </div>
            <div
              className="MuiGrid-container-1088 MuiGrid-item-1089 Widget-content Component-content-1"
            >
              <div>
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/Widget featured 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-797 MuiGrid-spacing-xs-24-821"
    >
      <div
        className="MuiGrid-item-798 MuiGrid-grid-xs-12-837"
      >
        <div
          className="MuiPaper-root MuiPaper-elevation2 MuiPaper-rounded Widget-root Widget-featured"
        >
          <div
            className="MuiGrid-container-797 MuiGrid-direction-xs-column-800 Widget-container"
          >
            <div
              className="MuiGrid-item-798"
            >
              <h6
                className="MuiTypography-root MuiTypography-h6 MuiTypography-colorInherit MuiTypography-gutterBottom"
              >
                Title
              </h6>
            </div>
            <div
              className="MuiGrid-container-797 MuiGrid-item-798 Widget-content"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/Widget squared 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-991 MuiGrid-spacing-xs-24-1015"
    >
      <div
        className="MuiGrid-item-992 MuiGrid-grid-xs-12-1031"
      >
        <div
          className="MuiPaper-root MuiPaper-elevation2 Widget-root"
        >
          <div
            className="MuiGrid-container-991 MuiGrid-direction-xs-column-994 Widget-container"
          >
            <div
              className="MuiGrid-item-992"
            >
              <h6
                className="MuiTypography-root MuiTypography-h6 MuiTypography-colorInherit MuiTypography-gutterBottom"
              >
                I have no rounded borders
              </h6>
            </div>
            <div
              className="MuiGrid-container-991 MuiGrid-item-992 Widget-content"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/Widget with borders 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-894 MuiGrid-spacing-xs-24-918"
    >
      <div
        className="MuiGrid-item-895 MuiGrid-grid-xs-12-934"
      >
        <div
          className="MuiGrid-container-894 MuiGrid-spacing-xs-24-918"
        >
          <div
            className="MuiGrid-item-895 MuiGrid-grid-xs-6-928"
          >
            <div
              className="MuiPaper-root MuiPaper-elevation2 MuiPaper-rounded Widget-root Widget-border Widget-border-top"
            >
              <div
                className="MuiGrid-container-894 MuiGrid-direction-xs-column-897 Widget-container"
              >
                <div
                  className="MuiGrid-item-895"
                >
                  <h6
                    className="MuiTypography-root MuiTypography-h6 MuiTypography-colorInherit MuiTypography-gutterBottom"
                  >
                    Border top
                  </h6>
                </div>
                <div
                  className="MuiGrid-container-894 MuiGrid-item-895 Widget-content"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
                </div>
              </div>
            </div>
          </div>
          <div
            className="MuiGrid-item-895 MuiGrid-grid-xs-6-928"
          >
            <div
              className="MuiPaper-root MuiPaper-elevation2 MuiPaper-rounded Widget-root Widget-border Widget-border-bottom"
            >
              <div
                className="MuiGrid-container-894 MuiGrid-direction-xs-column-897 Widget-container"
              >
                <div
                  className="MuiGrid-item-895"
                >
                  <h6
                    className="MuiTypography-root MuiTypography-h6 MuiTypography-colorInherit MuiTypography-gutterBottom"
                  >
                    Border bottom
                  </h6>
                </div>
                <div
                  className="MuiGrid-container-894 MuiGrid-item-895 Widget-content"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
                </div>
              </div>
            </div>
          </div>
          <div
            className="MuiGrid-item-895 MuiGrid-grid-xs-6-928"
          >
            <div
              className="MuiPaper-root MuiPaper-elevation2 MuiPaper-rounded Widget-root Widget-border Component-customTopBorder-2 Widget-border-top"
            >
              <div
                className="MuiGrid-container-894 MuiGrid-direction-xs-column-897 Widget-container"
              >
                <div
                  className="MuiGrid-item-895"
                >
                  <h6
                    className="MuiTypography-root MuiTypography-h6 MuiTypography-colorInherit MuiTypography-gutterBottom"
                  >
                    Border top custom
                  </h6>
                </div>
                <div
                  className="MuiGrid-container-894 MuiGrid-item-895 Widget-content"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
                </div>
              </div>
            </div>
          </div>
          <div
            className="MuiGrid-item-895 MuiGrid-grid-xs-6-928"
          >
            <div
              className="MuiPaper-root MuiPaper-elevation2 MuiPaper-rounded Widget-root Widget-border Component-customBotomBorder-3 Widget-border-bottom"
            >
              <div
                className="MuiGrid-container-894 MuiGrid-direction-xs-column-897 Widget-container"
              >
                <div
                  className="MuiGrid-item-895"
                >
                  <h6
                    className="MuiTypography-root MuiTypography-h6 MuiTypography-colorInherit MuiTypography-gutterBottom"
                  >
                    Border bottom custom
                  </h6>
                </div>
                <div
                  className="MuiGrid-container-894 MuiGrid-item-895 Widget-content"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
